modifications to generate project - modal - setting focus - fixing alignment issues

--- a/src/main/content/_assets/css/start.scss
+++ b/src/main/content/_assets/css/start.scss
@@ -677,71 +677,52 @@ html, body {
     margin-left: 24px;
 }
 
-.generate-project-modal-class{
-    display: none; 
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+@media (min-width: 576px) {
+    .modal-dialog {
+        max-width: 575px;
+    }  
 }
-
-.show-modal-popup {
-    display: block;
-}
-  
-.generate-project-modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 15px;
-    border: 1px solid #888;
-    width: 40%;
-}
-  
-.generate-project-modal-content div {
-    padding: 25px;
-}
-
-.generate-project-modal-content h3 {
-    color: #5E6B8D;
-    padding: 10px 0px 10px 0px;
-}
-
-.generate-project-modal-close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 30px;
-    font-weight: bold;
-}
-  
-.generate-project-modal-close:hover,
-.generate-project-modal-close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.generate-project-modal-content .guide-link {
-    padding-bottom: 15px;
-}
-
-#gen_proj_popup_button {
-    border-radius: 7px;
-    padding: 10px 40px;
-    color: #24253a;
-    background-color: #ABD155;
-    text-align: center;
-    width: 20%;
-
-    &:hover {
-        cursor: pointer;
-        background-color: #C7EE63;
-        text-decoration: none;
+ 
+.modal-content {
+    border: 3px solid #ABD155;
+    border-radius: 10px;
+    h3 {
+        padding-bottom: 15px;
+    }
+    .modal-body {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .close {
+        font-weight: normal;
+    }
+    .modal-header {
+        border-bottom: 0px;
+    }
+    #cmd_to_run {
+        background-color: #F1F4FE;
+        color: #24243B;
+        font-family: Courier;
+        font-size: 16px;
+        padding: 20px 20px;
+        border-radius: 7px;
+        margin-right: 30px;
+        margin-left: -5px;
+        margin-bottom: 10px;
+    }
+    .guide-link {
+        padding-top: 15px;
+    }
+    .modal-footer {
+        border-top: 0px;
+        justify-content: space-between;
+        padding-left: 30px;
+        margin-bottom: 40px;
+    }
+    #gen_proj_popup_button {
+        background-color: #5E6B8D;
+        width: 28%;
+        border-radius: 7px;
     }
 }
 
